--- a/package.json
+++ b/package.json
@@ -20,23 +20,31 @@
     "start:chromium": "web-ext run --source-dir ./extension --target=chromium",
     "start:firefox": "web-ext run --source-dir ./extension --target=firefox-desktop",
     "clear": "rimraf extension/dist extension/manifest.json extension.*",
-    "lint": "eslint 'src/**/*.{json,ts,js,vue}'"
+    "lint": "eslint 'src/**/*.{json,ts,js}'"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.9.0",
     "@ffflorian/jszip-cli": "^3.1.5",
     "@iconify/json": "^1.1.408",
     "@types/fs-extra": "^9.0.13",
     "@types/node": "^16.10.2",
+    "@types/react": "^17.0.33",
+    "@types/react-dom": "^17.0.10",
     "@types/webextension-polyfill": "^0.8.0",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
-    "@vitejs/plugin-vue": "^1.9.2",
-    "@vue/compiler-sfc": "^3.2.19",
-    "@vueuse/core": "^6.5.3",
+    "@typescript-eslint/parser": "^5.2.0",
+    "@vitejs/plugin-react": "^1.0.6",
     "chokidar": "^3.5.2",
     "cross-env": "^7.0.3",
     "crx": "^5.0.1",
     "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-plugin-flowtype": "^8.0.2",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "esno": "^0.10.0",
     "fs-extra": "^10.0.0",
     "kolorist": "^1.5.0",
@@ -44,13 +52,12 @@
     "rimraf": "^3.0.2",
     "typescript": "^4.4.3",
     "unplugin-auto-import": "^0.4.8",
-    "unplugin-icons": "^0.11.4",
-    "unplugin-vue-components": "^0.15.4",
     "vite": "^2.6.2",
-    "vite-plugin-windicss": "^1.4.8",
-    "vue": "^3.2.19",
-    "vue-demi": "^0.11.4",
-    "web-ext": "^6.4.0",
+    "web-ext": "^6.4.0"
+  },
+  "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "webext-bridge": "^5.0.0",
     "webextension-polyfill": "^0.8.0"
   }
