Add wallet tokens

--- a/package.json
+++ b/package.json
@@ -56,6 +56,9 @@
     "web-ext": "^6.4.0"
   },
   "dependencies": {
+    "@solana/spl-token": "^0.1.8",
+    "@solana/spl-token-registry": "^0.2.361",
+    "@solana/web3.js": "^1.30.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "webext-bridge": "^5.0.0",
