--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@solana/spl-token": "^0.1.8",
     "@solana/spl-token-registry": "^0.2.361",
     "@solana/web3.js": "^1.30.2",
+    "buffer": "^6.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "webext-bridge": "^5.0.0",
