--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@typescript-eslint/eslint-plugin": "^4.32.0",
     "@typescript-eslint/parser": "^5.2.0",
     "@vitejs/plugin-react": "^1.0.6",
+    "autoprefixer": "^10.4.1",
     "chokidar": "^3.5.2",
     "cross-env": "^7.0.3",
     "crx": "^5.0.1",
@@ -49,13 +50,17 @@
     "fs-extra": "^10.0.0",
     "kolorist": "^1.5.0",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.5",
     "rimraf": "^3.0.2",
+    "tailwindcss": "^3.0.8",
     "typescript": "^4.4.3",
     "unplugin-auto-import": "^0.4.8",
     "vite": "^2.6.2",
     "web-ext": "^6.4.0"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
+    "daisyui": "^1.21.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "webext-bridge": "^5.0.0",
