--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "daisyui": "^1.21.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "6",
     "webext-bridge": "^5.0.0",
     "webextension-polyfill": "^0.8.0"
   }
