--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "web-ext": "^6.4.0"
   },
   "dependencies": {
+    "@project-serum/anchor": "^0.20.1",
     "@solana/spl-token": "^0.1.8",
     "@solana/spl-token-registry": "^0.2.1219",
     "@solana/web3.js": "^1.30.2",
@@ -67,10 +68,12 @@
     "classnames": "^2.3.1",
     "clipboard": "^2.0.8",
     "daisyui": "^1.21.0",
+    "date-fns": "^2.28.0",
     "jsbi": "^4.1.0",
     "mathjs": "^10.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-query": "^3.34.8",
     "react-router-dom": "6",
     "recharts": "^2.1.8",
     "webext-bridge": "^5.0.0",
