feat: Create seed

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@ffflorian/jszip-cli": "^3.1.5",
     "@iconify/json": "^1.1.408",
+    "@types/chrome": "^0.0.177",
     "@types/fs-extra": "^9.0.13",
     "@types/node": "^16.10.2",
     "@types/react": "^17.0.33",
@@ -64,6 +65,7 @@
     "@solana/spl-token": "^0.1.8",
     "@solana/spl-token-registry": "^0.2.1219",
     "@solana/web3.js": "^1.30.2",
+    "bip39": "^3.0.4",
     "buffer": "^6.0.3",
     "classnames": "^2.3.1",
     "clipboard": "^2.0.8",
@@ -76,6 +78,7 @@
     "react-query": "^3.34.8",
     "react-router-dom": "6",
     "recharts": "^2.1.8",
+    "stream-browserify": "^3.0.0",
     "webext-bridge": "^5.0.0",
     "webextension-polyfill": "^0.8.0"
   }
