--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "typescript": "^4.4.3",
     "unplugin-auto-import": "^0.4.8",
     "vite": "^2.6.2",
+    "vite-compatible-readable-stream": "^3.6.0",
     "vite-plugin-svg-icons": "^1.1.0",
     "web-ext": "^6.4.0"
   },
