--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.5",
     "rimraf": "^3.0.2",
+    "rollup-plugin-copy": "^3.4.0",
     "tailwindcss": "^3.0.8",
     "typescript": "^4.4.3",
     "unplugin-auto-import": "^0.4.8",
