--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "clipboard": "^2.0.8",
     "daisyui": "^1.21.0",
     "date-fns": "^2.28.0",
+    "ed25519-hd-key": "^1.2.0",
     "jsbi": "^4.1.0",
     "mathjs": "^10.0.2",
     "react": "^17.0.2",
@@ -79,6 +80,7 @@
     "react-query": "^3.34.8",
     "react-router-dom": "6",
     "recharts": "^2.1.8",
+    "tweetnacl": "^1.0.3",
     "webext-bridge": "^5.0.0",
     "webextension-polyfill": "^0.8.0"
   }
